# -Discontinued-Jade

./: CMakeLists.txt  Jade.sln  LICENSE  README.md
ClientSDK/cmake/: CMakeLists.txt
ConsoleClient/app/: App.cpp
ConsoleClient/cmake/: CMakeLists.txt
Core/Log/: ILogAppender.h  Logger.h
Core/Log/Appenders/: ConsoleAppender.cpp
Core/cmake/: CMakeLists.txt
Core/include/: ArrayUtils.h  ConsoleAppender.h  LogLevel.h  Logger.h
Core/include/Logger/: ConsoleAppender.h  ILogAppender.h  Logger.h
Core/include/Tick/: TickableBase.h  Ticker.h
Core/include/Utils/: ArrayUtils.h  DateTimeUtils.h  StringUtils.h
Core/src/: ArrayUtils.cpp  ConsoleAppender.cpp  Logger.cpp
Core/src/Logger/: ConsoleAppender.cpp  Logger.cpp
Core/src/Tick/: TickableBase.cpp  Ticker.cpp
Core/src/Utils/: ArrayUtils.cpp  DateTimeUtils.cpp  StringUtils.cpp  VectorUtils.cpp
Jade.Client/: Jade.Client.cpp  Jade.Client.vcxproj  Jade.Client.vcxproj.filters
Jade.ClientSdk/: Jade.ClientSdk.vcxproj
Jade.Core/: Jade.Core.vcxproj  Jade.Core.vcxproj.filters
Jade.Core/Log/: ILogAppender.h  Logger.cpp  Logger.h
Jade.Core/Log/Appenders/: ConsoleAppender.cpp  ConsoleAppender.h
Jade.Core/Utils/: ArrayUtils.cpp
Jade.LoadBalancer/: Jade.LoadBalancer.cpp  Jade.LoadBalancer.vcxproj  Jade.LoadBalancer.vcxproj.filters
Jade.Server/: Jade.Server.cpp  Jade.Server.vcxproj  Jade.Server.vcxproj.filters
LoadBalancer/app/: App.cpp
LoadBalancer/cmake/: CMakeLists.txt
Server/app/: App.cpp
Server/cmake/: CMakeLists.txt
Server/include/: Version.h
Server/include/Server/: Server.h
Server/src/Server/: Server.cpp
client_sdk/cmake/: CMakeLists.txt
console_client/app/: app.cc
console_client/cmake/: CMakeLists.txt
core/cmake/: CMakeLists.txt
core/include/: jadecore.h  version.h
core/include/command/: command_executor.h  i_command_handler.h
core/include/logger/: console_appender.h  i_log_appender.h  log_level.h  logger.h
core/include/rpc/: rpc_event.h  rpc_status.h
core/include/startup/: core_startup_task.h  startup.h  startup_task.h
core/include/task/: task.h  task_base.h  task_manager.h  task_status.h
core/include/tick/: tickable_base.h  ticker.h
core/include/utils/: array_utils.h  date_time_utils.h  string_utils.h  vector_utils.h
core/proto/: server.proto
core/source/command/: command_executor.cc
core/source/logger/: Logger.cc  console_appender.cc
core/source/rpc/: rpc_event.cc  rpc_status.cc
core/source/startup/: core_startup_task.cc  startup_task.cc
core/source/task/: task_base.cc  task_manager.cc
core/source/tick/: tickable_base.cc  ticker.cc
core/source/utils/: array_utils.cc  date_time_utils.cc  string_utils.cc  vector_utils.cc
core/src/command/: command_executor.cc
core/src/logger/: Logger.cc  console_appender.cc  console_appender.cpp  console_appender.h
core/src/startup/: startup_task.cc  startup_task.cpp
core/src/task/: task_base.cc  task_base.cpp  task_base.h  task_manager.cc  task_manager.cpp
core/src/tick/: tickable_base.cc  tickable_base.cpp  ticker.cc  ticker.cpp
core/src/utils/: array_utils.cc  array_utils.cpp  date_time_utils.cc  date_time_utils.cpp  string_utils.cc  string_utils.cpp  vector_utils.cc  vector_utils.cpp  vector_utils.h
load_balancer/cmake/: CMakeLists.txt
server/app/: app.cc  app.cpp
server/cmake/: CMakeLists.txt
server/include/: jadeserver.h
server/include/command/: info_command_handler.h
server/include/handler/: info_handler.h
server/include/rpc/: rpc.h  rpc_handler.h  rpc_handler_base.h  rpc_handler_base_t.h  rpc_handler_status.h
server/include/server/: server.h
server/include/startup/: command_startup.h  startup_task.h
server/source/command/: info_command_handler.cc
server/source/rpc/: rpc.cc  rpc_handler.cc
server/source/server/: server.cc
server/source/startup/: command_startup.cc  startup_task.cc
server/src/command/: info_command_handler.cc  info_command_handler.h
server/src/handler/: info_handler.cc  info_handler.h
server/src/rpc/: rpc.cc  rpc.h  rpc_handler.cc  rpc_handler.h  rpc_handler_base.cc  rpc_handler_base.h  rpc_handler_base_t.h  rpc_handler_registry.cc  rpc_handler_registry.h  rpc_handler_status.h
server/src/server/: server.cc  server.cpp  server.h
server/src/startup/: command_startup.cc  startup_task.cc  startup_task.cpp  startup_task.h
tools/protoc/: generate.bat
